# cars_mobi

./: .gitignore  README.md  README.qmd  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.ipynb  Untitled-checkpoint.ipynb  __init__-checkpoint.py
cars_py/: app.py  dash_app.py
cars_scrape/: aracaju.csv  fortaleza.csv  joao_pessoa.csv  maceio.csv  natal.csv  recife.csv  sao_luis.csv  scrapy.cfg  teresina.csv
cars_scrape/cars_scrape/: items.py  middlewares.py  pipelines.py  settings.py
cars_scrape/cars_scrape/spiders/: mobi_spider.py
scratch_models/: __init__.py  linear_reg.py  rio_branco.csv
scratch_models/.ipynb_checkpoints/: linear_reg-checkpoint.py
