[tool.poetry]
name = "cars-py"
version = "0.1.0"
description = ""
authors = ["cowvin0 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.110.0,<0.111.0"
scrapy = ">=2.11.1,<2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
