[tool.poetry]
name = "cars-py"
version = "0.1.0"
description = ""
authors = ["cowvin0 <gabrielpereira00PereiraGabriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.110.0,<0.111.0"
scrapy = ">=2.11.1,<2.12.0"
scrapy-playwright = ">=0.0.34,<0.1.0"
dash = ">=2.16.1,<2.17.0"
pandas = ">=2.2.2,<2.3.0"
uvicorn = ">=0.29.0,<0.30.0"
dash-bootstrap-components = ">=1.5.0,<1.6.0"
numpy = ">=1.26.4,<1.27.0"
seaborn = ">=0.13.2,<0.14.0"
statsmodels = ">=0.14.1,<0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
